@@ -2402,12 +2402,24 @@ public class Compilation
   /** If non-null, a helper method generated by getForNameHelper. */
   Method forNameHelper;
 
+  public void loadClassRef (ClassType clas)
+  {
+    if (clas == mainClass && mainLambda.isStatic())
+      {
+        CodeAttr code = getCode();
+        code.emitGetStatic(moduleInstanceMainField);
+        code.emitInvokeVirtual(Type.pointer_type.getDeclaredMethod("getClass", 0));
+      }
+    else
+      loadClassRef(clas.getName());
+  }
+
   /** Generate code to load a named Class without initializing it.
    */
   public void loadClassRef (String className)
   {
     CodeAttr code = getCode();
-    // The following conditional should be for JAVA5, but that cause
+    // The following conditional should be for JAVA5, but that causes
     // a verification error I haven't managed to figure out.  FIXME.
     /* #ifdef false */
     // code.emitPushClass(className);
